Rewritten HTML building phase with latest prototype 1.6.0 functionality.

--- a/tests/functional/functional-tooltips-test.html
+++ b/tests/functional/functional-tooltips-test.html
@@ -8,7 +8,7 @@
 	<title>Tooltips Functional Test</title>
 	
 	<script type="text/javascript" src="../../lib/prototype.js"></script>
-	<script type="text/javascript" src="../../lib/scriptaculous.js?load=builder,effects"></script>
+	<script type="text/javascript" src="../../lib/scriptaculous.js?load=effects"></script>
 	
 	<script type="text/javascript" src="../../tooltips.js"></script>
 	<link rel="stylesheet" href="../../tooltips.css" type="text/css" />
