--- a/tests/functional/functional-tooltips-test.html
+++ b/tests/functional/functional-tooltips-test.html
@@ -28,7 +28,7 @@
 		<li><a href="#" title="Tooltip test text" class="help"><span><img src="../img.gif" alt="Image description" id="img1" />Link text...</span></a></li>
 		<li><a href="#" title="Tooltip test textTooltip test textTooltip test textTooltip test textTooltip test textTooltip test text	" class="help">Link text...</a></li>
 		<li><a href="#" title="http://swik.net/Typo/Encytemedia/This+Site+is+Moving/403y" class="help">Link text...</a></li>
-		<li><p title="This is formatted text. &#013; Line breaks are used&#013;to format it." class="help">Link text...</p></li>
+		<li><p title="This is formatted text. <br/>Line breaks are used<br/>to format it." class="help">Link text...</p></li>
 	</ul>
 	
 	<p style="position:absolute; right: 10px; width:300px;"><a href="#" class="help" title="Tooltip test text Tooltip test text Tooltip test text Tooltip test text Tooltip test text Tooltip test text">Hover me long-long way, baby!</a></p>
